do not take snapshot of block state if we do not use it and the inventory is live anyway